# QA_GURU_18_homework

./: .gitignore  pyproject.toml
tests/: conftest.py  test_auth.py  test_clubs_create.py  test_clubs_data.py  test_clubs_delete.py  test_clubs_edit.py  test_clubs_pagination.py  test_clubs_reviews.py  test_clubs_schema.py  test_clubs_search.py  test_register.py
tests/schemas/: auth_schema.py  get_books_response_schema.py
