[project]
name = "qa-guru-18-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Alena Gushcha",email = "g.aliena@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)"
]

