[project]
name = "qa-guru-18-homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Alena Gushcha",email = "g.aliena@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)"
]

